# smurfs

./: CMakeLists.txt  LICENSE  README.md  config.h.in
algo/: CMakeLists.txt  swapoddeven.c  topk.c
include/: list.h  stack.h  type.h
sort/: CMakeLists.txt  quicksort.c
src/: CMakeLists.txt  list.c
test/: CMakeLists.txt  test_list.c  test_stack.c
utils/: stack.c
